# translator_for_youtube

./: .gitignore  README.md  register_startup.ps1  start_server.bat  start_server.ps1  stop_server.bat  stop_server.ps1
backend/: .env.example  exceptions.py  main.py  models.py  notification_service.py  pyproject.toml  requirements.txt  routes.py  services.py  validators.py
chrome_extension/: background.js  content.js  manifest.json  translator_ui.html  translator_ui.js
